--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,6 @@
 {
     "type": "project",
     "license": "proprietary",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
@@ -100,12 +98,16 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-symfony": "^3.1",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
-    }
+        "symfony/web-profiler-bundle": "6.1.*",
+        "vimeo/psalm": "^4.24"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
