wip: Google OAuth2

--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+GOOGLE_CLIENT_ID=313586748956-ccd91l5s8ffr6pj7p81tcggflrph2v0k.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
