--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 .php-cs-fixer.cache
 tryit.php
 ###< etc ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
