--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,9 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{js,jsx}]
+indent_size = 2
+
+[webpack.config.js]
+indent_size = 4
