--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "core-js": "^3.0.0",
+        "eslint": "^8.19.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
